Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2024 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Include necessary headers for gRPC functionality
#include <grpcpp/ext/proto_server_reflection_plugin.h>
#include <grpcpp/grpcpp.h>
#include <grpcpp/health_check_service_interface.h>
#include <grpcpp/support/status.h>

// Standard C++ headers
#include <cstddef>
#include <iostream>
#include <memory>
#include <string>

// Abseil headers for flags and logging
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_cat.h"

// Include generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define command line flags using Abseil
ABSL_FLAG(uint16_t, port, 50051, "Server port for the service");
ABSL_FLAG(size_t, message_size, 3 * 1024 * 1024,
          "Size of the messages to send");
ABSL_FLAG(uint32_t, to_send, 10,
          "Messages to send in response to a single request");

// Using declarations for gRPC types
using grpc::CallbackServerContext;
using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerUnaryReactor;
using grpc::Status;

namespace {

// Reactor class that handles streaming responses to the client
class HelloReactor final
    : public grpc::ServerWriteReactor<helloworld::HelloReply> {
 public:
  // Constructor initializes the response message and starts the first write
  HelloReactor(size_t message_size, size_t to_send)
      : messages_to_send_(to_send) {
    res_.set_message(std::string(message_size, '#'));
    Write();
  }

  // Initiates a write operation with the current response
  void Write() {
    absl::MutexLock lock(&mu_);
    StartWrite(&res_);
    --messages_to_send_;
    write_start_time_ = absl::Now();
  }

  // Callback invoked when a write operation completes
  void OnWriteDone(bool ok) override {
    bool more = false;
    {
      absl::MutexLock lock(&mu_);
      // Log write completion information
      std::cout << "Write #" << messages_to_send_ << " done (Ok: " << ok
                << "): " << absl::Now() - *write_start_time_ << "\n";
      write_start_time_ = std::nullopt;
      // Determine if more messages should be sent
      more = ok && messages_to_send_ > 0;
    }
    if (more) {
      // Continue writing if there are more messages to send
      Write();
    } else {
      // Finish the RPC with OK status if done
      Finish(grpc::Status::OK);
      std::cout << "Done sending messages\n";
    }
  }

  // Callback invoked when the RPC is done
  void OnDone() override { delete this; }

 private:
  helloworld::HelloReply res_;           // Response message to send
  size_t messages_to_send_;              // Remaining messages to send
  std::optional<absl::Time> write_start_time_;  // Timestamp of write start
  absl::Mutex mu_;                      // Mutex for thread safety
};

// Service implementation that handles RPC requests
class GreeterService final : public helloworld::Greeter::CallbackService {
 public:
  GreeterService(size_t message_size, size_t to_send)
      : message_size_(message_size), to_send_(to_send) {}

  // Implementation of the streaming RPC method
  grpc::ServerWriteReactor<helloworld::HelloReply>* SayHelloStreamReply(
      grpc::CallbackServerContext* ,
      const helloworld::HelloRequest* request) override {
    // Create and return a new reactor for this RPC
    return new HelloReactor(message_size_, to_send_);
  }

 private:
  size_t message_size_;  // Size of each response message
  size_t to_send_;       // Number of messages to send per request
};

}  // namespace

// Main function that sets up and runs the gRPC server
int main(int argc, char* argv[]) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();
  
  // Set up server address from command line flag
  std::string server_address =
      absl::StrCat("0.0.0.0:", absl::GetFlag(FLAGS_port));
  
  // Enable health checking service and reflection
  grpc::EnableDefaultHealthCheckService(true);
  grpc::reflection::InitProtoReflectionServerBuilderPlugin();
  
  // Create service instance with configured message size and count
  GreeterService service(absl::GetFlag(FLAGS_message_size),
                         absl::GetFlag(FLAGS_to_send));
  
  // Build and start the server
  ServerBuilder builder;
  builder.RegisterService(&service);
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
  std::unique_ptr<Server> server(builder.BuildAndStart());
  
  // Server is now running
  std::cout << "Server listening on " << server_address << std::endl;
  server->Wait();  // Block until shutdown
  
  return 0;
}
```

Key aspects covered in the comments:
1. File header and license information
2. Purpose of each include directive
3. Explanation of command line flags
4. Documentation of the reactor pattern implementation
5. Thread safety considerations with mutex usage
6. Flow control for streaming responses
7. Service implementation details
8. Server setup and initialization process
9. Clear separation between different components
10. Important callbacks and their purposes

The comments aim to provide both high-level understanding of the architecture and detailed explanations of important implementation choices.